Fixed the extra space error in Past Trips tab

--- a/src/Client/styles/main.scss
+++ b/src/Client/styles/main.scss
@@ -69,3 +69,7 @@ input{
     width: 100% !important;
     height:7vh;
 }
+
+h5#nothing {
+    padding-top: 100px !important;
+}
